OPI 3 lab MBeans added

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -27,49 +27,57 @@
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-2"--><h:commandButton action="#{controllerBean.setX(-2)}" value="-2" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(-2)}" update="@form"
+                                <!--@declare id="form:checkbox-2"-->
+                                <h:commandButton action="#{controllerBean.setX(-2)}" value="-2" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(-2)}" update="@form"
                                                  id="checkbox-2" ajax="true"/>
                                 <label for="form:checkbox-2">-2</label>
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-3"--><h:commandButton action="#{controllerBean.setX(-1)}" value="-1" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(-1)}" update="@form"
+                                <!--@declare id="form:checkbox-3"-->
+                                <h:commandButton action="#{controllerBean.setX(-1)}" value="-1" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(-1)}" update="@form"
                                                  id="checkbox-3" ajax="true" active="#{controllerBean.checkButtonX(-1)}"/>
                                 <label for="form:checkbox-3">-1</label>
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-4"--><h:commandButton action="#{controllerBean.setX(0)}" value="0" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(0)}" update="@form"
+                                <!--@declare id="form:checkbox-4"-->
+                                <h:commandButton action="#{controllerBean.setX(0)}" value="0" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(0)}" update="@form"
                                                  id="checkbox-4" ajax="true" active="#{controllerBean.checkButtonX(0)}"/>
                                 <label for="form:checkbox-4">0</label>
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-5"--><h:commandButton action="#{controllerBean.setX(1)}" value="1" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(1)}" update="@form"
+                                <!--@declare id="form:checkbox-5"-->
+                                <h:commandButton action="#{controllerBean.setX(1)}" value="1" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(1)}" update="@form"
                                                  id="checkbox-5" ajax="true" active="#{controllerBean.checkButtonX(1)}"/>
                                 <label for="form:checkbox-5">1</label>
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-6"--><h:commandButton action="#{controllerBean.setX(2)}" value="2" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(2)}" update="@form"
+                                <!--@declare id="form:checkbox-6"-->
+                                <h:commandButton action="#{controllerBean.setX(2)}" value="2" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(2)}" update="@form"
                                                  id="checkbox-6" ajax="true" active="#{controllerBean.checkButtonX(2)}"/>
                                 <label for="form:checkbox-6">2</label>
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-7"--><h:commandButton action="#{controllerBean.setX(3)}" value="3" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(3)}" update="@form"
+                                <!--@declare id="form:checkbox-7"-->
+                                <h:commandButton action="#{controllerBean.setX(3)}" value="3" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(3)}" update="@form"
                                                  id="checkbox-7" ajax="true" active="#{controllerBean.checkButtonX(3)}"/>
                                 <label for="form:checkbox-7">3</label>
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-8"--><h:commandButton action="#{controllerBean.setX(4)}" value="4" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(4)}" update="@form"
+                                <!--@declare id="form:checkbox-8"-->
+                                <h:commandButton action="#{controllerBean.setX(4)}" value="4" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(4)}" update="@form"
                                                  id="checkbox-8" ajax="true" active="#{controllerBean.checkButtonX(4)}"/>
                                 <label for="form:checkbox-8">4</label>
                             </div>
 
                             <div class="form_radio_btn">
-                                <!--@declare id="form:checkbox-9"--><h:commandButton action="#{controllerBean.setX(5)}" value="5" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(5)}" update="@form"
+                                <!--@declare id="form:checkbox-9"-->
+                                <h:commandButton action="#{controllerBean.setX(5)}" value="5" class="r-choose_input checkbox_x checked_#{controllerBean.checkButtonX(5)}" update="@form"
                                                  id="checkbox-9" ajax="true" active="#{controllerBean.checkButtonX(5)}"/>
                                 <label for="form:checkbox-9">5</label>
                             </div>
@@ -82,7 +90,7 @@
                     <label id="r-label">Выберите R</label>
                     <div>
                         <div class="form_radio_btn">
-                            <h:selectOneRadio value="#{controllerBean.graphShot.r}" class="r-choose_input checkbox_x" name="r" style="display: none">
+                            <h:selectOneRadio value="#{controllerBean.graphShot.r}" class="r-choose_input checkbox_x" name="r">
                                 <f:selectItem itemValue="1" itemLabel="1"/>
                                 <f:selectItem itemValue="1.5" itemLabel="1.5"/>
                                 <f:selectItem itemValue="2" itemLabel="2"/>
